# dahlia

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  \  current_docker_setup.txt  current_dockerfile.txt  delete_dockerfile.txt  docker-bake.hcl  docker-compose.cloud.yml  docker-compose.yml  fetch-gcp-secrets.sh  leptos_migration_script.sh  leptos_specific_fixes.sh  package-lock.json  package.json  student_id_mapping.csv  tailwind.config.js  tmp_file
.cargo/: config.toml
.github/workflows/: prod.yml  prod2.yml
assets/: dahlia_data.drawio
dashboard.db/: 000009.sst  IDENTITY  MANIFEST-000005  OPTIONS-000007
migrations/: 0001_test_bank.sql  0002_test_bank.sql  0003_create_auth_tables.sql  0004_student_changes.sql  0005_test_changes.sql  0006_student_pin.sql  0007_sessions.sql  0008_upgrade_sessions.sql  0009_assessments.sql  0010_student_values_changes.sql  0011_intervention_types.sql  0012_adding_attempts_to_score.sql  0013_more_user_data.sql  0014_assessment_types_change.sql  0015_student_promotion_system.sql  0016_courses_table.sql  0017_user_roles.sql  0018_basic_settings_table.sql  0019_migrate_to_courses_and_enrollments.sql  0020_assessment_scores_over_time.sql  0021_student_protections_setting.sql  0022_student_protections_issue.sql  0023_timezones.sql  0024_courses_modified.sql  0025_saml_support.sql  0026_assessment_sequences.sql  0027_websocket_sessions.sql  0028_weighted_multiple_choice.sql  0029_question_table_constraints.sql  0030_instructions_for_test.sql  0031_new_test_area_enums.sql  0032_assessment_data_types_modified.sql  0033_verifications_and_invitations.sql
scripts/: backup_script.sh  remove_pii_data.sql  restore_backup_script.sh  restore_pii_data.sql
src/: app.rs  lib.rs  main.rs
src/app/: app_routes.rs  components.rs  db.rs  errors.rs  middleware.rs  models.rs  pages.rs  routes.rs  server_functions.rs  services.rs  utils.rs  websockets.rs
src/app/components/: add_student_modal.rs  add_test_modal.rs  admin.rs  administer_test_modal.rs  auth.rs  body.rs  dashboard.rs  data_charts.rs  data_processing.rs  edit_student_modal.rs  edit_test_modal.rs  gradebook.rs  header.rs  live_testing.rs  login_components.rs  nav.rs  question_builder.rs  scoring_engine.rs  settings.rs  show_student_modal.rs  show_test_modal.rs  student_page.rs  student_report.rs  student_row.rs  student_table.rs  teacher_page.rs  test_components.rs  test_display.rs  test_item.rs  test_templates.rs  toast.rs  update_user_modal.rs
src/app/components/admin/: saml_admin.rs  saml_admin_content.rs
src/app/components/assessment_page/: mod.rs
src/app/components/auth/: authorization_components.rs  enhanced_login_form.rs  login_form.rs  reset_password_components.rs  saml_login_form.rs  server_auth_components.rs  test_saml.rs
src/app/components/charts/: charts.rs
src/app/components/csv_parser/: parser.rs  upload.rs
src/app/components/dashboard/: chat.rs  color_utils.rs  dashboard_deanonymizer.rs  dashboard_sidebar.rs  scores_ledger.rs
src/app/components/data_functions/: data_transformations.rs
src/app/components/data_processing/: student_charts.rs  student_results_summary.rs  test_pie_chart.rs
src/app/components/gradebook/: gradebook_filtering.rs  gradebook_side_panel.rs
src/app/components/live_testing/: anonymous_student_test.rs  connection_status.rs  live_test.rs  mod.rs  navigation.rs  participants_list.rs  qr_component.rs  question_card.rs  session_manager.rs  student_select.rs  test_controls.rs  test_session.rs  types.rs  utils.rs  websocket_handler.rs
src/app/components/login_components/: password_reset.rs
src/app/components/scoring_engine/: scoring.rs
src/app/components/settings/: bulk_enrollment_modal.rs  promotion_demo.csv  settings_modal.rs
src/app/components/student_page/: add_student_form.rs  bulk_upload_modal.rs  delete_student_confirmation.rs  enrollment_csv_template.csv  student_csv_template.csv  student_details.rs  student_search_filter.rs  student_table.rs  student_view_old.txt  update_student_form.rs
src/app/components/student_report/: assessments.rs  overview.rs  sequence_progress_bar.rs  sequence_web.rs
src/app/components/teacher_page/: add_employee_form.rs  (+9 more)
src/app/db/: assessment_database.rs  course_database.rs  database.rs  enrollment_database.rs  global_database.rs  invitation_database.rs  question_database.rs  saml_database.rs  score_database.rs  session_database.rs  sqldb.rs  student_database.rs  surrealdatabase.rs  teacher_database.rs  test_database.rs  user_database.rs  websocket_session_database.rs
src/app/errors/: question_errors.rs  student_errors.rs  test_errors.rs
src/app/middleware/: authentication.rs  global_settings.rs
src/app/models/: :wq  assessment.rs  assessment_sequences.rs  auth.rs  bulk_enrollment.rs  bulk_student.rs  course.rs  employee.rs  enrollment.rs  global.rs  invitation.rs  question.rs  score.rs  session.rs  setting_data.rs  student.rs  teacher.rs  test.rs  test_result.rs  user.rs  variation.rs  websocket_session.rs  websocket_testing_sessions.rs
src/app/pages/: activities.rs  admin_dashboard.rs  admin_test.rs  assessment.rs  assessment_page.rs  classroom.rs  dashboard.rs  data_view.rs  gradebook.rs  home_page.rs  login_page.rs  math_testing.rs  my_account.rs  reading_testing.rs  review_test.rs  settings.rs  student_results.rs  student_view.rs  teacher_view.rs  test_builder.rs  test_page.rs  test_sessions.rs
src/app/routes/: saml_routes.rs
src/app/server_functions/: anonymized_student_data.rs  assessments.rs  auth.rs  authorization.rs  bulk_enrollment.rs  bulk_students.rs  courses.rs  data_wrappers.rs  employees.rs  enrollments.rs  globals.rs  invitations.rs  jwt_authentication.rs  questions.rs  saml_auth.rs  saml_routes.rs  scores.rs  sessions.rs  students.rs  teachers.rs  tests.rs  user_settings.rs  users.rs  websocket_sessions.rs
src/app/services/: email_service.rs
src/app/utils/: benchmark_utils.rs
src/app/websockets/: actors.rs  handlers.rs  lobby.rs  messages.rs  start_connection.rs  state.rs  ws.rs
static/: tinymce_init.js
style/: input.css  main.scss
style/output/: output.css
(+54 files in other folders)
